# python-flask

./: Dockerfile  Makefile  README.md  hello_world.py  pyproject.toml  setup.cfg
.github/workflows/: python-ci.yml
templates/: args.html  bottles.html  index.html
tests/: test_app.py
