[tool.poetry]
name = "python-flask"
version = "0.1.0"
description = "A simple Flask app"
authors = ["Hexlet Team <info@hexlet.io>"]
license = "ISC"
readme = "README.md"
packages = [{include = "python_flask"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
