[tool.poetry]
name = "python-flask"
version = "0.1.0"
description = "A simple Flask app"
authors = ["Hexlet Team <info@hexlet.io>"]
license = "ISC"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
wemake-python-styleguide = "^0.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
